[gd_scene load_steps=5 format=2]

[ext_resource path="res://scene/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://script/World.gd" type="Script" id=2]
[ext_resource path="res://assets/player_health.png" type="Texture" id=3]
[ext_resource path="res://script/HealthSprite.gd" type="Script" id=4]

[node name="World" type="Node2D"]
script = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 46.2487, 143.919 )

[node name="EnemyTimer" type="Timer" parent="."]
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HealthSprite" type="Sprite" parent="CanvasLayer"]
position = Vector2( 77.2841, 155.329 )
texture = ExtResource( 3 )
hframes = 4
frame = 3
script = ExtResource( 4 )
[connection signal="node_instance" from="Player" to="." method="_node_instance"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_EnemyTimer_timeout"]
